scoots/styles/base.css
body {
    font-family: Arial, sans-serif;
    background-color: #dccfbb;
    margin: 0;
    padding: 0;
    height: 100%;
}


header {
    background-color: #3b5998;
    color: #FFFFFF;
    padding: 20px;
    text-align: center;
}

h1 {
    margin: 0;
    font-size: 2.5rem;
}

.navigation {
    display: block;
    text-align: center;
    background-color: #adeee9;
    padding: 10px;
    
}

.navigation ul {
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: space-around;
}

.navigation li {
    display: inline;
}


.navigation ul li {
    display: inline;
    
}

.navigation ul li:last-child {
    margin-right: 0;
}

.navigation ul li a {
    color: #3B5998; 
    text-decoration: none;
    font-weight: bold;
}

.navigation ul li a:hover {
    color: #3B5998; 
    background-color: #ffeead; 
    padding: 5px 10px;
    border-radius: 5px;
}

#menu {
	font-size: 1.5rem;
	border: 0;
	background: none;
	color: #000;
	position: absolute;
	top: 1rem;
	right: 1rem;
}

#menu::before {
    content: "⬇️ Menu";
    color: #FFFFFF;
}

#menu.open::before {
	content: "❌ Menu";
    color: #FFFFFF;
}

.active::before {
    content:"🛵";
}

.active::after {
    content:"🛵";
}

.cta-banner {
    background-color: #3b5998;
    color: #fff;
    text-align: center;
    padding: 10px 0;
}

.cta-link {
    color: #fff;
    text-decoration: none;
    font-weight: bold;
}

.cta-link:hover {
    text-decoration: underline;
}

.hero-collage {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 10px;
    max-width: 1000px; 
    margin: 0 auto;
}

.hero-collage img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: filter 0.3s ease-in-out;
    position: relative;
}

.hero-collage img:hover {
    filter: grayscale(100%);
}

.hero-collage img::after {
    content: attr(alt);
    position: absolute;
    bottom: 10px;
    left: 10px;
    background-color: rgba(0, 0, 0, 0.7);
    color: #fff;
    padding: 5px;
    border-radius: 5px;
    font-size: 14px;
    opacity: 0;
    transition: opacity 0.3s ease-in-out; 
}

.hero-collage img:hover::after {
    opacity: 1;
}

main {
    padding: 20px;
}

.grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 20px;
    padding: 20px;
}

.summary-card-container {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    grid-column: 1;
}

.summary-card {
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin-bottom: 20px; 
}

.summary-card h2 {
    font-size: 24px;
    margin-bottom: 10px;
}

.summary-card h3 {
    font-size: 20px;
    margin-top: 20px;
    margin-bottom: 10px;
}

.summary-card ul {
    list-style-type: none;
    padding-left: 20px;
}

.summary-card li {
    margin-bottom: 10px;
    list-style: disc;
}

.weather-card {
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.weather-card #message {
    margin-bottom: 10px;
}

.weather-card #current-temp,
.weather-card #current-humidity,
.weather-card #next-day-forecast,
.weather-card #weather-info {
    margin-bottom: 10px;
}

.weather-card img {
    display: block;
    margin: 0 auto; 
    width: 100px;
    height: auto; 
}



.rental-location-card {
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin-bottom: 20px;
    text-align: center;
    grid-column-start: 1;
    grid-column-end: 3;
}

.location-title {
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 10px;
}

.location-list {
    list-style-type: none;
    padding: 0;
}

.location-list li {
    margin-bottom: 10px;
    text-align: center;
    margin-top: 20px;
}

.location-list li strong {
    font-size: 17px;
    font-style: italic;
}


.rental-card {
    width: 300px;
    margin: 20px auto;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    background-color: #ffffff;
}

.rental-image {
    width: 100%; 
    height: auto; 
    border-radius: 10px; 
    margin-bottom: 10px;
}

.rental-title {
    font-size: 1.5rem;
    margin-bottom: 10px;
}

.rental-details {
    margin-bottom: 10px;
}

.price-info {
    margin-bottom: 10px;
}

.price-reservation {
    color: #007bff;
    font-weight: bold;
    margin-bottom: 5px;
}

.price-walk-in {
    font-weight: bold;
    margin-bottom: 5px;
    color: red;
}


.card {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin: 20px;
    max-width: 500px;
    width: 100%;
}

.contact-card {
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    padding: 20px;
    text-align: center;
}

.contact-card h2 {
    margin-top: 0;
}

.contact-card form button[type="submit"] {
    background-color: #3b5998;
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.contact-card form button[type="submit"]:hover {
    background-color: #45a049;
}

.map-card {
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    overflow: hidden;
}

.map-card iframe {
    width: 100%;
    height: 480px;
}

.reservation-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.reservation-form {
    margin-top: 20px;
}

form {
    display: flex;
    flex-direction: column;
}

label {
    margin-bottom: 6px;
}

input, select, textarea {
    margin-bottom: 10px;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    width: 95%;
}

input[type="checkbox"] {
    margin-right: 6px;
}

input[type="submit"] {
    background-color: #3b5998;
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 4px;
    cursor: pointer;
    margin-top: 10px;
}

input[type="submit"]:hover {
    background-color: #45a049;
}

footer {
    background-color: #3b5998;
    color: #FFFFFF;
    padding: 5px;
    text-align: center;
}

.fa {
    padding: 15px;
    font-size: 30px;
    text-align: center;
    text-decoration: none;
    margin: 7px;
    border-color: #FFFFFF;
    border-radius: 20px;
    border-style: groove;
  }
  
  .fa:hover {
      opacity: 0.7;
  }
  
  .fa-facebook {
    background: #3B5998;
    color: white;
  }
  
  .fa-twitter {
    background: #55ACEE;
    color: white;
  }
  
  .fa-instagram {
    background: #125688;
    color: white;
  }


@media only screen and (max-width: 600px) {
    header {
        padding-top: 50px;
    }
    .navigation ul {
        display: none;
    }

    .navigation li {
        padding: 10px;
    }

    .navigation ul.open {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #menu.open {
        display: block;
    }

    .hero-collage img::after {
        font-size: 12px;
    }

    .grid-container {
        grid-template-columns: 1fr;
    }

    .weather-card,
    .rental-location-card {
        grid-column: auto;
        width: auto;
    }
    
}

@media screen and (min-width: 601px) {
    #menu {
        display: none;
    }
}

@media (min-width: 601px) {
    #rentals-container {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 20px;
    }
}


@media (max-width: 600px) {
    #rentals-container {
        display: block;
    }
}

